Alterado para salvar no storage as reclamações por dia;

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,5 +6,7 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button block color="danger" (click)="showAlert()">Reclamei</button>
+  <button ion-button block color="danger" (click)="complain()">Reclamei</button>
+
+  <h1>{{complains}}</h1>
 </ion-content>
