--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,16 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button block color="danger" (click)="complain()">Reclamei</button>
-
-  <h1>{{complains}}</h1>
+  <h1 class="complains-number"
+      text-center
+     [style.color]="getColor()">{{complains}}</h1>
 </ion-content>
+<ion-footer no-shadow>
+	<ion-toolbar position="bottom">
+    <button ion-button
+            block
+            large
+            color="danger"
+            (click)="complain()">Reclamei</button>
+	</ion-toolbar>
+</ion-footer>
