Ajustado projeto para trabalhar com abas;

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,21 +1,1 @@
-
-<ion-header>
-  <ion-navbar>
-    <ion-title>Desafio 21 dias</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  <h1 class="complains-number"
-      text-center
-     [style.color]="getColor()">{{complains}}</h1>
-</ion-content>
-<ion-footer no-shadow>
-	<ion-toolbar position="bottom">
-    <button ion-button
-            block
-            large
-            color="danger"
-            (click)="complain()">Reclamei</button>
-	</ion-toolbar>
-</ion-footer>
+<ion-nav [root]="rootPage"></ion-nav>
